# tqtec

./: CMakeLists.txt  Makefile  README  README.md
examples/: do_full_example.sh  do_tqtec_example.sh  ex_01.in  ex_burial.in  ex_burial_uplift.in  ex_hfvar.in  ex_short_course.in  ex_thicken.in  ex_thin.in  ex_thrust_lower.in  ex_thrust_upper.in  ex_uplift.in  ex_uplift_burial.in  ex_uplift_new.in  ex_uplift_old.in
scripts/: do_full_example.sh  do_minage_example.sh  do_tqtec_example.sh  plot_all.sh  plot_dep0_vs_time.sh  plot_dep_vs_temp.sh  plot_dep_vs_time.sh  plot_hf_vs_time.sh  plot_minage_aft_final.sh  plot_temp_vs_time.sh  plot_tqclim_all.sh  plot_tqtec_all.sh  plot_tqtec_closure.sh  plot_tqtec_dep_vs_time.sh  plot_tqtec_hf_vs_time.sh  plot_tqtec_temp_contours.sh  plot_tqtec_temp_vs_dep.sh  plot_tqtec_temp_vs_time.sh  plot_tqtec_tti_vs_time.sh  plotdep0_gmt5.sh
src/: TQTec.f  TQvTec.f  apatite_helium_module.f90  build_temp_history.f90  diffusion_module.f90  fission_track_module.f90  ftage.f90  helium_diffusion_module.f90  minage.f90  petro.f90  physical_constants_module.f90  radiogenic_helium_module.f90  readTQTec02.f  readtqtec.f90  tqtec.f90  tqtec_actions.f90  tqtec_io.f90
